# beamng-selfdriving

./: README.md  cam.py  drive copy.py  drive.py  lane_detection.avi  pyproject.toml
